# Resume-Genie

./: .gitignore  AI_Career_Coach (Colab).ipynb  Cover_Letter_Generator (Colab).ipynb  README.md  Resume_Checker (Colab).ipynb  Resume_Scorer (Colab).ipynb  pyproject.toml  requirements.txt
.claude/: settings.json
agent/: __init__.py  app.py  graph.py  pdf_utils.py  prompts.py  state.py  tools.py
assets/: architecture.excalidraw
docs/: test_queries.md  tools.md
notebooks/: AI_Career_Coach.ipynb  Agent_Testing.ipynb  Cover_Letter_Generator.ipynb  Resume_Checker.ipynb  Resume_Scorer.ipynb
scripts/: ai_career_coach.py  cover_letter_generator.py  main_dashboard.py  resume_checker.py  resume_scorer.py
