[project]
name = "resume-genie"
version = "0.1.0"
description = "AI-powered resume tools: checker, scorer, cover letter generator, and career coach"
requires-python = ">=3.12"
dependencies = [
    "langchain_xai",
    "langchain_community",
    "pypdf",
    "langchain_core",
    "sentence_transformers",
    "streamlit",
]

[tool.setuptools]
py-modules = [
    "ai_career_coach",
    "cover_letter_generator",
    "demo",
    "main_dashboard",
    "resume_checker",
    "resume_scorer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "ipython",
]
